tests/negative/optimizer/index-copy-oob.orng
fn main() -> Int
    let mut x: [4]Int
    x[100] = 0
    0